--- a/CAs/LifeLike/life.html
+++ b/CAs/LifeLike/life.html
@@ -14,7 +14,7 @@
   <canvas width="512" height="512" />
 
   <script type="module">
-    import main from "http://localhost:5500/life.js";
+    import main from "http://localhost:5500/CAs/LifeLike/life.js";
     // ignore my path lmao
     main();
   </script>
