--- a/CAs/LifeLike/life.html
+++ b/CAs/LifeLike/life.html
@@ -17,7 +17,7 @@
   // Flags for event coordination
   var running = false;
   var oneFrame = false;
-  var forcedUpdate = () => { return; }; // Value will be addd when defined
+  var forcedUpdate = () => { return; }; // Value will be added when defined
 
   // Keyboard event callback
   function keyListener(e) {
@@ -56,8 +56,8 @@
 
   <script type="module">
     import main from "http://localhost:5500/CAs/LifeLike/life.js";
-    //main();
 
+    main()
     // Button Event listeners
     document.getElementById('play').addEventListener('click', function () {
       running = !running;
@@ -70,9 +70,9 @@
 
     document.getElementById('submitInput').addEventListener('click', function () {
       const inputText = document.getElementById('simulationInput').value;
-
+      cleanUp()
       // Call a function from life.js and pass the inputText
-      main(inputText); // Assuming 'main' can accept parameters
+      main(inputText);
     });
 
 
