--- a/CAs/LifeLike/life.html
+++ b/CAs/LifeLike/life.html
@@ -17,6 +17,8 @@
   // Flags for event coordination
   var running = false;
   var oneFrame = false;
+  var newRuleString = false;
+  var ruleString = "";
   var forcedUpdate = () => { return; }; // Value will be added when defined
 
   // Keyboard event callback
@@ -56,7 +58,7 @@
 
   <script type="module">
     import main from "http://localhost:5500/CAs/LifeLike/life.js";
-
+    import resetResources from "http://localhost:5500/CAs/LifeLike/life.js";
     main()
     // Button Event listeners
     document.getElementById('play').addEventListener('click', function () {
@@ -68,11 +70,14 @@
       forcedUpdate();
     });
 
+
     document.getElementById('submitInput').addEventListener('click', function () {
       const inputText = document.getElementById('simulationInput').value;
-      cleanUp()
       // Call a function from life.js and pass the inputText
-      main(inputText);
+      newRuleString = true
+      ruleString = inputText
+      console.log(inputText)
+      forcedUpdate()
     });
 
 
@@ -82,6 +87,7 @@
 <!-- Final setup script -->
 <script type="text/javascript">
   document.getElementsByTagName("body")[0].onkeypress = keyListener;
+  // add te
 </script>
 
 </html>
