--- a/CAs/LifeLike/life.html
+++ b/CAs/LifeLike/life.html
@@ -57,10 +57,9 @@
   </div>
 
   <script type="module">
-    import main from "http://localhost:5500/CAs/LifeLike/life.js";
-    import resetResources from "http://localhost:5500/CAs/LifeLike/life.js";
+    import main from "./life.js";
     main()
-    // Button Event listeners
+    // Button Event listeners (clicks)
     document.getElementById('play').addEventListener('click', function () {
       running = !running;
     });
@@ -70,6 +69,10 @@
       forcedUpdate();
     });
 
+    // Listens to key presses
+    document.getElementsByTagName("body")[0].onkeypress = keyListener;
+
+    // parsing newly inputted rule strings
     document.getElementById('submitInput').addEventListener('click', function () {
       const inputText = document.getElementById('simulationInput').value;
       // Call a function from life.js and pass the inputText
@@ -81,10 +84,5 @@
 
   </script>
 </body>
-
-<!-- Final setup script -->
-<script type="text/javascript">
-  document.getElementsByTagName("body")[0].onkeypress = keyListener;
-</script>
 
 </html>
