--- a/CAs/LifeLike/life.html
+++ b/CAs/LifeLike/life.html
@@ -7,35 +7,6 @@
   <link rel="stylesheet" href="style.css"> <!-- Link to the CSS file -->
 </head>
 
-<!-- INIT CODE -->
-<script type="text/javascript">
-  // GLOBAL VARIABLE DEFINITION
-  // Define trigger keys
-  const PLAY_PAUSE_KEY = ' ';
-  const NEXT_FRAME_KEY = '.';
-
-  // Flags for event coordination
-  var running = false;
-  var oneFrame = false;
-  var newRuleString = false;
-  var ruleString = "";
-  var forcedUpdate = () => { return; }; // Value will be added when defined
-
-  // Keyboard event callback
-  function keyListener(e) {
-    switch (e.key) {
-      case PLAY_PAUSE_KEY:
-        running = !running;
-        break;
-      case NEXT_FRAME_KEY:
-        oneFrame = true;
-        forcedUpdate(); // Force immediate update
-        break;
-      default:
-    }
-  }
-</script>
-
 <div class="text-column">
   <h1>Game of Life</h1>
 </div>
@@ -52,34 +23,40 @@
 
 
 <body>
+  <!-- <body onkeydown="keyListener"> -->
   <div>
     <canvas width="1024" height="1024" />
   </div>
 
   <script type="module">
+    // imports
     import main from "./life.js";
+    import { keyListener, EventManager } from "./managers/EventManager.js";
+
+    // this main() is responsible for running the cellular automata
     main()
+
     // Button Event listeners (clicks)
     document.getElementById('play').addEventListener('click', function () {
-      running = !running;
+      EventManager.running = !EventManager.running;
     });
 
     document.getElementById('next').addEventListener('click', function () {
-      oneFrame = true;
-      forcedUpdate();
+      EventManager.oneFrame = true;
+      EventManager.forcedUpdate();
     });
 
     // Listens to key presses
-    document.getElementsByTagName("body")[0].onkeypress = keyListener;
+    document.getElementsByTagName("body")[0].addEventListener("keydown", keyListener, false); // problem child
 
     // parsing newly inputted rule strings
     document.getElementById('submitInput').addEventListener('click', function () {
       const inputText = document.getElementById('simulationInput').value;
       // Call a function from life.js and pass the inputText
-      newRuleString = true
-      ruleString = inputText
+      EventManager.newRuleString = true
+      EventManager.ruleString = inputText
       console.log(inputText)
-      forcedUpdate()
+      EventManager.forcedUpdate()
     });
 
   </script>
