--- a/LearningJS/keyEvent.html
+++ b/LearningJS/keyEvent.html
@@ -8,53 +8,56 @@
   On button pressed add 1 from global variable clickCount.
   Module Script - for compatibility check with current set up
     Print the current click count at one second intervals
-  --> 
+  -->
 <!DOCTYPE html>
-<html lang="en"> 
-  <head>
-    <meta charset="utf-8" />
-    <title>KeyEvent detection</title>
-  </head>
+<html lang="en">
 
-  <!-- INIT CODE -->
-  <script type="text/javascript">
-    // GLOBAL VARIABLE DEFINITION
-    var counter = 0;
-    console.log(counter);
+<head>
+  <meta charset="utf-8" />
+  <title>KeyEvent detection</title>
+</head>
 
-    // KEYBOARD EVENT HANDLING FUNCTION
-    function keyListener(e) {
-        if (e.key == ' '){ // If space was the trigger key
-            counter = counter-20;
-        }
-        console.log(e.key+ " was pressed");
+<!-- INIT CODE 
+<script type="text/javascript">
 
+</script> -->
+
+<body>
+
+  <!-- "Physical" elements -->
+  <h1>Press Space to subtract 20 - see console</h1>
+
+  <div>
+    <canvas width="512" height="512" id="disp" />
+  </div>
+
+  <div>
+    <button onclick="counter = counter - 1;" id="clicky">HELLO WORLD</button>
+  </div>
+
+  <!-- Module -->
+  <script type="module" src="http://localhost:5500/LearningJS/samplemod.js"></script>
+
+</body>
+
+<!-- Final setup script -->
+<script type="text/javascript">
+  // GLOBAL VARIABLE DEFINITION
+  var counter = 0;
+  console.log(counter);
+
+  // KEYBOARD EVENT HANDLING FUNCTION
+  function keyListener(e) {
+    if (e.key == ' ') { // If space was the trigger key
+      counter = counter - 20;
     }
-  </script>
+    console.log(e.key + " was pressed");
 
-  <body>
+  }
 
-    <!-- "Physical" elements -->
-    <h1>Press Space to subtract 20 - see console</h1>
-
-    <div>
-      <canvas width="512" height="512" id="disp" />
-    </div>
-
-    <div>
-      <button onclick="counter = counter - 1;" id="clicky">HELLO WORLD</button>
-    </div>
-
-    <!-- Module -->
-    <script type="module" src="http://localhost:5500/LearningJS/samplemod.js"></script>
-
-  </body>
-
-  <!-- Final setup script -->
-  <script type="text/javascript">
-    document.getElementById("disp").style.background = "black";
-    document.getElementById("clicky").style.background = "red";
-    document.getElementsByTagName("body")[0].onkeypress = keyListener;
-  </script>
+  document.getElementById("disp").style.background = "black";
+  document.getElementById("clicky").style.background = "red";
+  document.getElementsByTagName("body")[0].onkeypress = keyListener;
+</script>
 
 </html>
