--- a/CAs/LifeLike/life.html
+++ b/CAs/LifeLike/life.html
@@ -11,19 +11,20 @@
   <h1>Game of Life</h1>
 </div>
 
-<!-- Buttons corresponding to key clicks -->
-<button id="play">Play/Pause</button>
-<button id="next">Next Frame</button>
-
-<!-- Input Box for Simulation Parameters -->
-<div class="input-container">
-  <input type="text" id="simulationInput" placeholder="Enter rulestring :3">
-  <button id="submitInput">Submit</button>
-</div>
-
 <body>
+  <!-- Buttons corresponding to key clicks -->
+  <button id="play">Play/Pause</button>
+  <button id="next">Next Frame</button>
+
+  <!-- Input Box for Simulation Parameters -->
+  <div class="input-container">
+    <input type="text" id="simulationInput" placeholder="Enter rulestring :3">
+    <button id="submitInput">Submit</button>
+  </div>
+
+  <!-- Canvas containing cellular automata -->
   <div> <canvas width="1024" height="1024" /> </div>
-  <script type="module" src="main.js"></script>
+  <script type="module" src="life.js"></script>
 </body>
 
 </html>
