--- a/CAs/LifeLike/life.html
+++ b/CAs/LifeLike/life.html
@@ -12,12 +12,12 @@
 </div>
 
 <body>
-  <!-- Buttons corresponding to key clicks -->
-  <button id="play">Play/Pause</button>
-  <button id="next">Next Frame</button>
+  <div class="centre">
+    <!-- Buttons corresponding to key clicks -->
+    <button id="play">Play/Pause</button>
+    <button id="next">Next Frame</button>
 
-  <!-- Input Box for Simulation Parameters -->
-  <div class="input-container">
+    <!-- Input Box for Simulation Parameters -->
     <input type="text" id="simulationInput" placeholder="Enter rulestring :3">
     <button id="submitInput">Submit</button>
   </div>
