Updated benchmarking tools filepath

--- a/CAs/LifeLike/Benchmark/benchmarking.html
+++ b/CAs/LifeLike/Benchmark/benchmarking.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<script src="platform.js"></script>
-<script src="lodash.js"></script>
-<script src="benchmark.js"></script>
+<script src="../../../BenchmarkingToolbox/platform.js"></script>
+<script src="../../../BenchmarkingToolbox/lodash.js"></script>
+<script src="../../../BenchmarkingToolbox/benchmark.js"></script>
 
 <head>
   <meta charset="utf-8" />
