--- a/CAs/LifeLike/Benchmark/bchlife.html
+++ b/CAs/LifeLike/Benchmark/bchlife.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<script src="platform.js"></script>
-<script src="lodash.js"></script>
-<script src="benchmark.js"></script>
+<script src="../../../BenchmarkingToolbox/platform.js"></script>
+<script src="../../../BenchmarkingToolbox/lodash.js"></script>
+<script src="../../../BenchmarkingToolbox/benchmark.js"></script>
 
 <head>
   <meta charset="utf-8" />
@@ -35,6 +35,7 @@
 
 
   <!-- BENCHMARKING RESULTS ;) -->
+  <h2>Benchmarking Results</h2>
   <p class="element output" id="output">
     hellu
     wazzup
