--- a/CAs/Larger/life.html
+++ b/CAs/Larger/life.html
@@ -18,6 +18,10 @@
     <button id="next">Next Frame</button>
 
     <!-- Input Box for Simulation Parameters -->
+    <!-- Thinking of converting to boxes as follows for user conveniance: 
+      R[<input>], C[<input>], S[<input>], B[<input>], N[<input>]
+      We can then restrict input to numerical only with html I believe.
+    -->
     <input type="text" id="simulationInput" placeholder="Enter rulestring :3">
     <button id="submitInput">Submit Rule</button>
 
