--- a/CAs/LifeLike/life.html
+++ b/CAs/LifeLike/life.html
@@ -16,14 +16,25 @@
     <!-- Buttons corresponding to key clicks -->
     <button id="play">Play/Pause</button>
     <button id="next">Next Frame</button>
+  </div>
 
+  <div class="centre">
     <!-- Input Box for Simulation Parameters -->
-    <input type="text" id="simulationInput" placeholder="Enter rulestring :3">
+    <label for="simulationInput">Rulestring:</label><input type="text" id="simulationInput" value="23/3" pattern="[0-8]*/[0-8]*">
     <button id="submitInput">Submit Rule</button>
 
     <!-- Input Box for Speed -->
-    <input type="text" id="speedInputBox" placeholder="1-100:3">
+    <label for="speedInputBox">Speed(1-100):</label><input type="text" id="speedInputBox" value="3">
     <button id="speedInput">Submit Speed </button>
+  </div>
+
+  <!-- Selection options for templates -->
+  <div class="centre">
+    <label for="templateSelect">Starting Template:</label>
+    <select id="templateSelect">
+      <!-- See javascript -->
+    </select>
+    <button id="reset">Reset</button>
   </div>
 
   <!-- Canvas containing cellular automata -->
