made style sheet shared

--- a/CAs/Larger/life.html
+++ b/CAs/Larger/life.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>WebGPU Life</title>
-    <link rel="stylesheet" href="style.css"> <!-- Link to the CSS file -->
+    <link rel="stylesheet" href="../Shared/style.css"> <!-- Link to the CSS file -->
   </head>
 
   <div class="text-column">
@@ -34,11 +34,11 @@
         -->
       <div>
         <p>
-          <label for="simulationInputR">R</label><input class="ruleIn" type="number" id="simulationInputR" value="1" maxlength="3">,
-          <label for="simulationInputC">C</label><input class="ruleIn" type="number" id="simulationInputC" value="0">, 
-          <label for="simulationInputS">S</label><input class="ruleIn" type="text" id="simulationInputS" value="2-3" pattern="[0-9]|-|,">, 
-          <label for="simulationInputB">B</label><input class="ruleIn" type="text" id="simulationInputB" value="3">, 
-          <label for="simulationInputN">N</label><input class="ruleIn" type="text" id="simulationInputN" value="M">
+          <label for="simulationInputR">R</label><input class="ltlRuleIn" type="number" id="simulationInputR" value="1" maxlength="3">,
+          <label for="simulationInputC">C</label><input class="ltlRuleIn" type="number" id="simulationInputC" value="0">, 
+          <label for="simulationInputS">S</label><input class="ltlRuleIn" type="text" id="simulationInputS" value="2-3" pattern="[0-9]|-|,">, 
+          <label for="simulationInputB">B</label><input class="ltlRuleIn" type="text" id="simulationInputB" value="3">, 
+          <label for="simulationInputN">N</label><input class="ltlRuleIn" type="text" id="simulationInputN" value="M">
           <button id="submitInput">Submit Rule</button>
         </p>
       </div>
