forgot this last commit

--- a/CAs/LifeLike/life.html
+++ b/CAs/LifeLike/life.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>WebGPU Life</title>
-  <link rel="stylesheet" href="style.css"> <!-- Link to the CSS file -->
+  <link rel="stylesheet" href="../Shared/style.css"> <!-- Link to the CSS file -->
 </head>
 
 <div class="text-column">
