--- a/CAs/Larger/life.html
+++ b/CAs/Larger/life.html
@@ -32,7 +32,7 @@
       <ul>
         <li>(M) <i>Moore Neighbourhood</i>: the square neighbourhood</li>
         <li>(N) <i>von Neumann Neighbourhood</i>: all cells within the <a href="https://en.wikipedia.org/wiki/Taxicab_geometry">Manhatten distance</a> specified by the given radius</li>
-        <li>(C) <i>Circular</i>: all cells within the actual (circular) radius, measured in cell lengths <i>COMING SOON!</i></li>
+        <li>(C) <i>Circular</i>: all cells within the actual (circular) radius, measured in cell lengths</li>
       </ul>
       <!-- Input Box for Simulation Parameters -->
         <!-- 
