--- a/CAs/LifeLike/life.html
+++ b/CAs/LifeLike/life.html
@@ -3,37 +3,33 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>WebGPU Life: LifeLike</title>
+  <title>WebGPU Life</title>
   <link rel="stylesheet" href="../Shared/style.css"> <!-- Link to the CSS file -->
 </head>
 
 <div class="text-column">
-  <h1>LifeLike Cellular Automata</h1>
+  <h1>Game of Life</h1>
 </div>
 
 <body>
   <div class="centre">
-    
-  </div>
-
-  <div class="controlPanel">
     <!-- Buttons corresponding to key clicks -->
     <button id="play">Play/Pause</button>
     <button id="next">Next Frame</button>
-    <button id="randomise">Randomise Grid</button>
-    <br>
+  </div>
 
+  <div class="centre">
     <!-- Input Box for Simulation Parameters -->
     <label for="simulationInput">Rulestring:</label><input type="text" id="simulationInput" value="23/3" pattern="[0-8]*/[0-8]*">
     <button id="submitInput">Submit Rule</button>
-    <br>
 
     <!-- Input Box for Speed -->
-    <label for="speedInputBox">Speed(1-100):</label><input type="text" id="speedInputBox" value="100">
+    <label for="speedInputBox">Speed(1-100):</label><input type="text" id="speedInputBox" value="3">
     <button id="speedInput">Submit Speed </button>
-    <br>
+  </div>
 
-    <!-- Selection options for templates -->
+  <!-- Selection options for templates -->
+  <div class="centre">
     <label for="templateSelect">Starting Template:</label>
     <select id="templateSelect">
       <!-- See javascript -->
