--- a/CAs/Continuous/life.html
+++ b/CAs/Continuous/life.html
@@ -12,24 +12,27 @@
 </div>
 
 <body>
-  <div class="centre">
+  <div class="controlPanel">
     <!-- Buttons corresponding to key clicks -->
     <button id="play">Play/Pause</button>
     <button id="next">Next Frame</button>
+    <button id="randomise">Randomise Grid</button>
 
     <div class="grid">
       <input class="kernelRuleIn" type="number" id="kernel1" placeholder="0.11">
       <input class="kernelRuleIn" type="number" id="kernel2" placeholder="0.11">
       <input class="kernelRuleIn" type="number" id="kernel3" placeholder="0.11">
+      <br>
       <input class="kernelRuleIn" type="number" id="kernel4" placeholder="0.11">
       <input class="kernelRuleIn" type="number" id="kernel5" placeholder="0.11">
       <input class="kernelRuleIn" type="number" id="kernel6" placeholder="0.11">
+      <br>
       <input class="kernelRuleIn" type="number" id="kernel7" placeholder="0.11"> 
       <input class="kernelRuleIn" type="number" id="kernel8" placeholder="0.11">
       <input class="kernelRuleIn" type="number" id="kernel9" placeholder="0.11">
-      <button id="submitInput">Submit Kernel</button>
     </div>
-    
+    <button id="submitInput">Submit Kernel</button>
+    <br>
     <!-- Input Box for Speed -->
     <label for="speedInputBox">Speed(1-100):</label><input type="text" id="speedInputBox" value="3">
     <button id="speedInput">Submit Speed </button>
