--- a/CAs/Continuous/life.html
+++ b/CAs/Continuous/life.html
@@ -13,15 +13,20 @@
 
 <body>
   <div class="controlPanel">
-    <div class="grid">
+    <!-- Kernel Grid: divided into 3 control groups for aesthetic grid purposes-->
+    <div class="controlGroup">
       <input class="kernelRuleIn" type="number" id="kernel1" placeholder="0.11">
       <input class="kernelRuleIn" type="number" id="kernel2" placeholder="0.11">
       <input class="kernelRuleIn" type="number" id="kernel3" placeholder="0.11">
-      <br>
+    </div>
+    
+    <div class="controlGroup">
       <input class="kernelRuleIn" type="number" id="kernel4" placeholder="0.11">
       <input class="kernelRuleIn" type="number" id="kernel5" placeholder="0.11">
       <input class="kernelRuleIn" type="number" id="kernel6" placeholder="0.11">
-      <br>
+    </div>
+    
+    <div class="controlGroup">
       <input class="kernelRuleIn" type="number" id="kernel7" placeholder="0.11">
       <input class="kernelRuleIn" type="number" id="kernel8" placeholder="0.11">
       <input class="kernelRuleIn" type="number" id="kernel9" placeholder="0.11">
@@ -32,25 +37,28 @@
     <textarea id="activationTextField">Activation function...</textarea>
     <button id="submitActivation">Submit Activation</button>
 
-    <br>
 
     <!-- Input Box for Speed -->
-    <label for="speedInputBox">Speed(fps):</label><input type="number" id="speedInputBox" value="60" min="1" max="100">
-    <button id="speedInput">Submit Speed</button>
-    <br>
-
+    <div class="controlGroup">
+      <label for="skipEvenCheckbox">Skip Even Frames: </label><input type="checkbox" id="skipEvenCheckbox" value="false">
+      <label for="speedInputBox">Speed(fps):</label><input type="number" id="speedInputBox" value="60" min="1" max="900">
+      <button id="speedInput">Submit Speed</button>
+    </div>
     <!-- Selection options for templates -->
-    <label for="templateSelect">Starting Template:</label>
-    <select id="templateSelect">
-      <!-- See javascript -->
-    </select>
-    <button id="reset">Reset</button>
-    <br>
+    <div class="controlGroup">
+      <label for="templateSelect">Starting Template:</label>
+      <select id="templateSelect">
+        <!-- See javascript -->
+      </select>
+      <button id="reset">Reset</button>
+    </div>
 
     <!-- Buttons corresponding to key clicks -->
-    <button id="play">Play/Pause</button>
-    <button id="next">Next Frame</button>
-    <button id="randomise">Randomise Grid</button>
+    <div class="controlGroup">
+      <button id="play">Play/Pause</button>
+      <button id="next">Next Frame</button>
+      <button id="randomise">Randomise Grid</button>
+    </div>
 
   </div>
 
@@ -60,7 +68,8 @@
     <canvas id="canvas" width="1024" height="1024" />
   </div>
   <div class="canvasFooter">
-    <p id="cycleCounter">Update Cycles: null</p>
+    <div class="footerElement" id="cycleCounter">Update Cycles: null</div>
+    <div class="footerElement" id="framesDisplayed">Displays every Nth frame</div>
   </div>
 
   <script type="module" src="life.js"></script>
