--- a/CAs/Larger/life.html
+++ b/CAs/Larger/life.html
@@ -33,37 +33,44 @@
       </ul>
     </div>
     <div class="controlPanel">
-      <!-- Buttons corresponding to key clicks -->
-      <button id="play">Play/Pause</button>
-      <button id="next">Next Frame</button>
-      <button id="randomise">Randomise Grid</button>
-      <br>
-
+      
       <!-- Input Box for Simulation Parameters -->
       <!-- 
         Boxes arranged as follows for user conveniance: 
         R[<input>], C[<input>], S[<input>], B[<input>], N[<input>]
         Input is restricted
       -->
-      <label for="simulationInputR">R</label><input class="ltlRuleIn" type="number" id="simulationInputR" value="1" maxlength="3">,
-      <label for="simulationInputC">C</label><input class="ltlRuleIn" type="number" id="simulationInputC" value="0">, 
-      <label for="simulationInputS">S</label><input class="ltlRuleIn" type="text" id="simulationInputS" value="2-3" pattern="[0-9]|-|,">, 
-      <label for="simulationInputB">B</label><input class="ltlRuleIn" type="text" id="simulationInputB" value="3">, 
-      <label for="simulationInputN">N</label><input class="ltlRuleIn" type="text" id="simulationInputN" value="M">
-      <button id="submitInput">Submit Rule</button>
+      <div class="controlGroup">
+        <label for="simulationInputR">R</label><input class="ltlRuleIn" type="number" id="simulationInputR" value="1" maxlength="3">,
+        <label for="simulationInputC">C</label><input class="ltlRuleIn" type="number" id="simulationInputC" value="0">, 
+        <label for="simulationInputS">S</label><input class="ltlRuleIn" type="text" id="simulationInputS" value="2-3" pattern="[0-9]|-|,">, 
+        <label for="simulationInputB">B</label><input class="ltlRuleIn" type="text" id="simulationInputB" value="3">, 
+        <label for="simulationInputN">N</label><input class="ltlRuleIn" type="text" id="simulationInputN" value="M">
+        <button id="submitInput">Submit Rule</button>
+      </div>
 
       <!-- Input Box for Speed -->
-      <br>
-      <label for="speedInputBox">Speed(fps):</label><input type="number" id="speedInputBox" value="3" min="1" max="100">
-      <button id="speedInput">Submit Speed </button>
+      <div class="controlGroup">
+        <label for="skipEvenCheckbox">Skip Even Frames: </label><input type="checkbox" id="skipEvenCheckbox" value="false">
+        <label for="speedInputBox">Speed(fps):</label><input type="number" id="speedInputBox" value="40" min="1" max="500">
+        <button id="speedInput">Submit Speed </button>
+      </div>
 
-        <!-- Selection options for templates -->
-      <br>
-      <label for="templateSelect">Starting Template:</label>
-      <select id="templateSelect">
-        <!-- See javascript -->
-      </select>
-      <button id="reset">Reset</button>
+      <!-- Selection options for templates -->
+      <div class="controlGroup">
+        <label for="templateSelect">Starting Template:</label>
+        <select id="templateSelect">
+          <!-- See javascript -->
+        </select>
+        <button id="reset">Reset</button>
+      </div> 
+
+      <!-- Buttons corresponding to key clicks -->
+      <div class="controlGroup">
+        <button id="play">Play/Pause</button>
+        <button id="next">Next Frame</button>
+        <button id="randomise">Randomise Grid</button>
+      </div>  
 
 
     </div>
@@ -73,7 +80,8 @@
       <canvas id="canvas" width="1024" height="1024" />
     </div>
     <div class="canvasFooter">
-      <p id="cycleCounter">Update Cycles: null</p>
+      <div class="footerElement" id="cycleCounter">Update Cycles: null</div>
+      <div class="footerElement" id="framesDisplayed">Displays every Nth frame</div>
     </div>
 
     <script type="module" src="life.js"></script>
