--- a/CAs/LifeLike/life.html
+++ b/CAs/LifeLike/life.html
@@ -13,29 +13,36 @@
 
   <body>
     <div class="controlPanel">
+
+
       <!-- Input Box for Simulation Parameters -->
-      <label for="simulationInput">Rulestring:</label><input type="text" id="simulationInput" value="23/3" pattern="[0-8]*/[0-8]*">
-      <button id="submitInput">Submit Rule</button>
-      <br>
+      <div class="controlGroup">
+        <label for="simulationInput">Rulestring:</label><input type="text" id="simulationInput" value="23/3" pattern="[0-8]*/[0-8]*">
+        <button id="submitInput">Submit Rule</button>
+      </div>
 
       <!-- Input Box for Speed -->
-      <label for="speedInputBox">Speed(fps):</label><input type="number" id="speedInputBox" value="3" min="1" max="100">
-      <button id="speedInput">Submit Speed </button>
-      <br>
+      <div class="controlGroup">
+        <label for="skipEvenCheckbox">Skip Even Frames: </label><input type="checkbox" id="skipEvenCheckbox" value="false">
+        <label for="speedInputBox">Speed(fps):</label><input type="number" id="speedInputBox" value="5" min="1" max="1500">
+        <button id="speedInput">Submit Speed </button>
+      </div>
 
       <!-- Selection options for templates -->
+      <div class="controlGroup">
       <label for="templateSelect">Starting Template:</label>
       <select id="templateSelect">
         <!-- See javascript -->
       </select>
       <button id="reset">Reset</button>
-      <br>
+      </div>
       
       <!-- Buttons corresponding to key clicks -->
-      <button id="play">Play/Pause</button>
-      <button id="next">Next Frame</button>
-      <button id="randomise">Randomise Grid</button>
-
+      <div class="controlGroup">
+        <button id="play">Play/Pause</button>
+        <button id="next">Next Frame</button>
+        <button id="randomise">Randomise Grid</button>
+      </div>
     </div>
 
     <!-- Canvas containing cellular automata -->
@@ -43,7 +50,8 @@
       <canvas id="canvas" width="1024" height="1024" />
     </div>
     <div class="canvasFooter">
-      <p id="cycleCounter">Update Cycles: null</p>
+      <div class="footerElement" id="cycleCounter">Update Cycles: null</div>
+      <div class="footerElement" id="framesDisplayed">Displays every Nth frame</div>
     </div>
 
     <script type="module" src="life.js"></script>
