Fixed the bug where negative values wasn't displaying

--- a/CAs/Continuous/life.html
+++ b/CAs/Continuous/life.html
@@ -12,6 +12,9 @@
 </div>
 
 <body>
+  <div class="centre"><p> Key: green->blue = negative, darkred->yellow = positive</p></div>
+  
+
   <div class="controlPanel">
     <!-- Kernel Grid: divided into 3 control groups for aesthetic grid purposes-->
     <div class="controlGroup grid">
@@ -48,7 +51,7 @@
         <button id="speedInput">Submit Speed</button>
       </div>
       <div class="controlGroup">
-        <label for="skipEvenCheckbox">Skip Every Second Frame: </label><input type="checkbox" id="skipEvenCheckbox" value="false">
+        <label for="skipEvenCheckbox">Skip Every Second Frame: </label><input type="checkbox" id="skipEvenCheckbox" value="true">
       </div>
     </div>
 
