FEAT: Added navbar to all pages and changed colour to be consitent with parent DeepNeuron website

--- a/CAs/Continuous/life.html
+++ b/CAs/Continuous/life.html
@@ -7,14 +7,22 @@
   <link rel="stylesheet" href="../Shared/style.css"> <!-- Link to the CSS file -->
 </head>
 
-<div class="text-column">
-  <h1>Continuous Automata</h1>
-</div>
-
 <body>
+  <div class="navbar">
+    <a href="https://www.deepneuron.org/">
+      <img src="../Shared/mdn_logo.png" alt="Logo" style="height: 20px; vertical-align: middle;">
+    </a>
+    <a href="/">Home</a>
+    <a href="/about.html">About</a>
+    <a href="https://www.deepneuron.org/contact-us">Contact Us</a>
+  </div>
+
+  <div class="text-column">
+    <h1>Continuous Automata</h1>
+  </div>
+
   <div class="centre"><p> Key: green->blue = negative, darkred->yellow = positive</p></div>
   
-
   <div class="controlPanel">
     <!-- Kernel Grid: divided into 3 control groups for aesthetic grid purposes-->
     <div class="controlGroup grid">
