--- a/about.html
+++ b/about.html
@@ -5,35 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>About Us</title>
   <link rel="stylesheet" href="./CAs/Shared/style.css"> <!-- Link to the CSS file -->
-  <style>
-    a {
-      text-decoration: none;
-    }
-    .navbar {
-      background-color: #696969;
-      overflow: hidden;
-      padding: 0 10px;
-    }
-    .navbar a {
-      float: left;
-      display: block;
-      color: white;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-    }
-    .navbar a:hover {
-      background-color: #ddd;
-      color: black;
-    }
-  </style>
 </head>
 <body>
   <div class="navbar">
+    <a href="https://www.deepneuron.org/">
+      <img src="./CAs/Shared/mdn_logo.png" alt="Logo" style="height: 20px; vertical-align: middle;">
+    </a>
     <a href="/">Home</a>
-    <a href="./about.html">About</a>
+    <a href="/about.html">About</a>
     <a href="https://www.deepneuron.org/contact-us">Contact Us</a>
   </div>
-
 </body>
 </html>
