--- a/CAs/Conways_Life/Life.html
+++ b/CAs/Conways_Life/Life.html
@@ -5,12 +5,23 @@
 <head>
   <meta charset="utf-8" />
   <title>WebGPU Life</title>
+  <link rel="stylesheet" href="../Shared/style.css"> <!-- Link to the CSS file -->
 </head>
-<div class="text-column">
-  <h1>Game of Life</h1>
-</div>
 
 <body>
+  <div class="navbar">
+    <a href="https://www.deepneuron.org/">
+      <img src="../Shared/mdn_logo.png" alt="Logo" style="height: 20px; vertical-align: middle;">
+    </a>
+    <a href="/">Home</a>
+    <a href="/about.html">About</a>
+    <a href="https://www.deepneuron.org/contact-us">Contact Us</a>
+  </div>
+
+  <div class="text-column">
+    <h1>Game of Life</h1>
+  </div>
+
   <canvas width="512" height="512" />
 
   <script type="module">
