FIX: Testing without underscore

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="controlPanel">
     <h3>Select a model:</h3>
     <div class="panelRow controlGroup">
-      <a href="./CAs/Conways_Life/life.html" class="button" id="classic_conway">Classic Conway</a>
+      <a href="./CAs/ConwaysLife/life.html" class="button" id="classic_conway">Classic Conway</a>
       <a href="./CAs/Continuous/life.html" class="button" id="continuous">Continuous</a>
       <a href="./CAs/Larger/life.html" class="button" id="larger">Larger</a>
       <a href="./CAs/LifeLike/life.html" class="button" id="life_like">Life Like</a>
