FIX: Adding back the GOL script call

--- a/CAs/ConwaysLife/life.html
+++ b/CAs/ConwaysLife/life.html
@@ -22,12 +22,12 @@
   </div>
 
   <canvas width="512" height="512" />
-<!-- 
+
   <script type="module">
     import test from "./life.js";
     // ignore my path lmao
     test();
-  </script> -->
+  </script>
 </body>
 
 </html>
