--- a/CAs/Larger/life.html
+++ b/CAs/Larger/life.html
@@ -29,7 +29,7 @@
         s is ranges in the form a-b, c-d, e, ... giving the conditions of survival<br>
         b is ranges in the form a-b, c-d, e, ... giving the conditions of birth<br>
         n is the type of neighbourhood (eg. square, cicular) <br>
-        Rulestring based on that used by Golly LifeVier and MCell: <a href=https://golly.sourceforge.io/Help/Algorithms/Larger_than_Life.html>Ltl Rulestring</a><br>
+        Rulestring based on that used by Golly LifeViewer and MCell: <a href=https://golly.sourceforge.io/Help/Algorithms/Larger_than_Life.html>Ltl Rulestring</a><br>
 
     </p>
     <p>
