finished computer shader growing ca

--- a/CAs/Continuous/life.html
+++ b/CAs/Continuous/life.html
@@ -27,19 +27,21 @@
   <div class="controlPanel">
     <!-- Kernel Grid: divided into 3 control groups for aesthetic grid purposes-->
     <div class="controlGroup grid">
-      <div class="panelRow"><h3>Kernel</h3></div>
+      <div class="panelRow">
+        <h3>Kernel</h3>
+      </div>
       <div class="panelRow fullRow">
         <input type="number" id="kernel1" placeholder="0.11">
         <input type="number" id="kernel2" placeholder="0.11">
         <input type="number" id="kernel3" placeholder="0.11">
       </div>
-      
+
       <div class="panelRow fullRow">
         <input type="number" id="kernel4" placeholder="0.11">
         <input type="number" id="kernel5" placeholder="0.11">
         <input type="number" id="kernel6" placeholder="0.11">
       </div>
-      
+
       <div class="panelRow fullRow">
         <input type="number" id="kernel7" placeholder="0.11">
         <input type="number" id="kernel8" placeholder="0.11">
@@ -48,7 +50,9 @@
       <div class="panelRow fullRow"><button id="submitInput">Submit Kernel</button></div>
     </div>
     <div class="controlGroup grid">
-      <div class="panelRow fullRow"><h3>Activation Function</h3></div>
+      <div class="panelRow fullRow">
+        <h3>Activation Function</h3>
+      </div>
       <div class="panelRow fullRow"><textarea id="activationTextField">Activation function...</textarea></div>
       <div class="panelRow fullRow"><button id="submitActivation">Submit Activation</button></div>
     </div>
